2010-06-05  Colin Watson  <cjwatson@debian.org>

	* util/grub.d/00_header.in: Quote values assigned to `saved_entry',
	in case they contain spaces.

2010-06-04  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Prepend
	"part_" to partmap module names, in line with grub-install.
	Reported by: Jindřich Makovička (Debian bug #584426).

2010-06-04  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkimage.c: Make target-related error messages slightly
	more helpful; -O talks about "format".  Explicitly point to the use
	of -O if no target is specified.
	Reported by: Didier Raboud (Debian bug #584415).

2010-06-03  Colin Watson  <cjwatson@ubuntu.com>

	* INSTALL: Document several build requirements for optional features
	(libdevmapper, ncurses, libusb, SDL, FreeType, GNU Unifont).

2010-06-02  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* kern/emu/hostdisk.c (convert_system_partition_to_system_disk)
	[__NetBSD__]: Handle all device names matching /dev/r[a-z]+[0-9][a-z].
	(find_partition_start) [__NetBSD__]: Correct error messages for NetBSD.

2010-06-02  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Simple configuration): Fix copy-and-paste typo.
	Thanks to Jordan Uggla for spotting this.

2010-06-02  Aleš Nesrsta <starous@volny.cz>

	Finally make USB usable.

	* bus/usb/ohci.c (grub_ohci_reg_t): Add missing values.
	(GRUB_OHCI_RHUB_PORT_POWER_MASK): New macro.
	(GRUB_OHCI_RHUB_PORT_ALL_POWERED): Likewise.
	(GRUB_OHCI_REG_FRAME_INTERVAL_FSMPS_MASK): Likewise.
	(GRUB_OHCI_REG_FRAME_INTERVAL_FSMPS_SHIFT): Likewise.
	(GRUB_OHCI_REG_FRAME_INTERVAL_FI_SHIFT): Likewise.
	(GRUB_OHCI_FSMPS): Likewise.
	(GRUB_OHCI_PERIODIC_START): Likewise.
	(GRUB_OHCI_FRAME_INTERVAL): Likewise.
	(GRUB_OHCI_SET_PORT_ENABLE): Likewise.
	(GRUB_OHCI_CLEAR_PORT_ENABLE): Likewise.
	(GRUB_OHCI_SET_PORT_RESET): Likewise.
	(GRUB_OHCI_SET_PORT_RESET_STATUS_CHANGE): Likewise.
	* bus/usb/ohci.c (grub_ohci_pci_iter): Various important fixups.